Support agent v3.3.0 tags-from-host (#4)

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,7 @@ buildkite_agent_tags: []
 buildkite_agent_tags_from_ec2: "false"
 buildkite_agent_tags_from_ec2_tags: "false"
 buildkite_agent_tags_from_gcp: "false"
+buildkite_agent_tags_from_host: "false"
 buildkite_agent_bootstrap_script: "buildkite-agent bootstrap"
 buildkite_agent_git_clone_flags: "-v"
 buildkite_agent_git_clean_flags: "-fxdq"
